# strivee-to-btwb

./: .coverage  .env.example  .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
src/strivee_btwb/: btwb_client.py  capture.py  cli.py  config.py  models.py  pipeline.py  vision.py  wod.py
src/strivee_btwb/btwb/: __init__.py  client.py
src/strivee_btwb/capture/: __init__.py  adb.py
src/strivee_btwb/core/: config.py  log.py  models.py
src/strivee_btwb/processing/: __init__.py  llm_format.py  wod.py
src/strivee_btwb/vision/: __init__.py  parser.py
tests/fixtures/2026-04-27/: parsed_2026-04-27_Mon.json  parsed_2026-04-28_Tue.json
tests/integration/: test_btwb_client.py  test_vision.py
tests/unit/: test_capture.py  test_cli.py  test_models.py  test_pipeline.py  test_vision.py  test_wod.py
tests/unit/btwb/: test_client.py
tests/unit/capture/: test_adb.py  test_stitch.py
tests/unit/core/: test_log.py
tests/unit/processing/: test_llm_format.py  test_wod.py
tests/unit/vision/: test_parser.py
